// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputField should render correctly 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1u1wsqu {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1u1wsqu::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu:hover,
.cache-1u1wsqu:focus {
  border-color: #3b1a61;
}

.cache-1u1wsqu:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border-color: #3b1a61;
}

.cache-1u1wsqu::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1u1wsqu::-moz-placeholder {
  opacity: 1;
}

.cache-1u1wsqu:-ms-input-placeholder {
  opacity: 1;
}

.cache-1u1wsqu::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1u1wsqu el3h3g92"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="cache-1lt3r2p e5hc7t70"
      >
        <div
          class="cache-xbtm7g el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-94my69 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-94my69::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-94my69::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-94my69:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-94my69::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-94my69:hover,
.cache-94my69:focus {
  border-color: #3b1a61;
}

.cache-94my69:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border-color: #3b1a61;
}

.cache-94my69::-webkit-input-placeholder {
  opacity: 1;
}

.cache-94my69::-moz-placeholder {
  opacity: 1;
}

.cache-94my69:-ms-input-placeholder {
  opacity: 1;
}

.cache-94my69::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-94my69 el3h3g92"
          disabled=""
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="cache-1lt3r2p e5hc7t70"
      >
        <div
          class="cache-xbtm7g el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly generated 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1u1wsqu {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1u1wsqu::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu:hover,
.cache-1u1wsqu:focus {
  border-color: #3b1a61;
}

.cache-1u1wsqu:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border-color: #3b1a61;
}

.cache-1u1wsqu::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1u1wsqu::-moz-placeholder {
  opacity: 1;
}

.cache-1u1wsqu:-ms-input-placeholder {
  opacity: 1;
}

.cache-1u1wsqu::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1u1wsqu el3h3g92"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="cache-1lt3r2p e5hc7t70"
      >
        <div
          class="cache-xbtm7g el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly id 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1u1wsqu {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1u1wsqu::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu:hover,
.cache-1u1wsqu:focus {
  border-color: #3b1a61;
}

.cache-1u1wsqu:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border-color: #3b1a61;
}

.cache-1u1wsqu::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1u1wsqu::-moz-placeholder {
  opacity: 1;
}

.cache-1u1wsqu:-ms-input-placeholder {
  opacity: 1;
}

.cache-1u1wsqu::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1u1wsqu el3h3g92"
          id="id"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="cache-1lt3r2p e5hc7t70"
      >
        <div
          class="cache-xbtm7g el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly notice 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1u1wsqu {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1u1wsqu::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u1wsqu:hover,
.cache-1u1wsqu:focus {
  border-color: #3b1a61;
}

.cache-1u1wsqu:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border-color: #3b1a61;
}

.cache-1u1wsqu::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1u1wsqu::-moz-placeholder {
  opacity: 1;
}

.cache-1u1wsqu:-ms-input-placeholder {
  opacity: 1;
}

.cache-1u1wsqu::placeholder {
  opacity: 1;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.cache-1gf8r99 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 8px;
}

.cache-k1vg20-sizeStyles {
  vertical-align: middle;
  fill: #727683;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-g106tl {
  color: #727683;
  font-size: 12px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1u1wsqu el3h3g92"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="cache-1lt3r2p e5hc7t70"
      >
        <div
          class="cache-xbtm7g el3h3g94"
        />
      </div>
      <div
        class="el3h3g93 cache-1gf8r99 ehpbis70"
      >
        <svg
          class="cache-k1vg20-sizeStyles e1gt4cfo0"
          viewBox="0 0 24 24"
        >
          <path
            d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          />
        </svg>
        <p
          class="cache-g106tl e13y3mga0"
        >
          notice
        </p>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly random 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1mxzarr {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: calc(1 * 32px);
}

.cache-1mxzarr::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1mxzarr::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1mxzarr:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1mxzarr::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1mxzarr:hover,
.cache-1mxzarr:focus {
  border-color: #3b1a61;
}

.cache-1mxzarr:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border-color: #3b1a61;
}

.cache-1mxzarr::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1mxzarr::-moz-placeholder {
  opacity: 1;
}

.cache-1mxzarr:-ms-input-placeholder {
  opacity: 1;
}

.cache-1mxzarr::placeholder {
  opacity: 1;
}

.cache-16eoe1d-StyledRightElement {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 0 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #727683;
  pointer-events: auto;
}

.cache-16eoe1d-StyledRightElement:hover,
.cache-16eoe1d-StyledRightElement:focus-within {
  color: #3f4250;
}

.cache-16eoe1d-StyledRightElement>button {
  box-shadow: none!important;
}

.cache-b79aqv {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 24px;
}

.cache-s56scf {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-s56scf:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-s56scf:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-s56scf:hover,
.cache-s56scf:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1mxzarr el3h3g92"
          name="test"
          type="text"
          value=""
        />
        <div
          class="cache-16eoe1d-StyledRightElement el3h3g97"
        >
          <div
            class="cache-b79aqv el3h3g91"
          >
            <button
              aria-label="randomize"
              class="cache-s56scf e112qvla0"
              type="button"
            >
              <svg
                class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="cache-1lt3r2p e5hc7t70"
      >
        <div
          class="cache-xbtm7g el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly required 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1mxzarr {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: calc(1 * 32px);
}

.cache-1mxzarr::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1mxzarr::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1mxzarr:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1mxzarr::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1mxzarr:hover,
.cache-1mxzarr:focus {
  border-color: #3b1a61;
}

.cache-1mxzarr:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border-color: #3b1a61;
}

.cache-1mxzarr::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1mxzarr::-moz-placeholder {
  opacity: 1;
}

.cache-1mxzarr:-ms-input-placeholder {
  opacity: 1;
}

.cache-1mxzarr::placeholder {
  opacity: 1;
}

.cache-61s40w-StyledRightElement {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 0 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #727683;
}

.cache-61s40w-StyledRightElement:hover,
.cache-61s40w-StyledRightElement:focus-within {
  color: #3f4250;
}

.cache-8ikytl-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-1lt3r2p {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1mxzarr el3h3g92"
          name="test"
          type="text"
          value=""
        />
        <div
          class="cache-61s40w-StyledRightElement el3h3g97"
        >
          <svg
            class="cache-8ikytl-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cache-1lt3r2p e5hc7t70"
      >
        <div
          class="cache-xbtm7g el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly with minLength 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1rg4d5m {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  border-color: #b3144d;
}

.cache-1rg4d5m::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1rg4d5m::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1rg4d5m:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1rg4d5m::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1rg4d5m:hover,
.cache-1rg4d5m:focus {
  border-color: #3b1a61;
}

.cache-1rg4d5m:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border-color: #3b1a61;
}

.cache-1rg4d5m::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1rg4d5m::-moz-placeholder {
  opacity: 1;
}

.cache-1rg4d5m:-ms-input-placeholder {
  opacity: 1;
}

.cache-1rg4d5m::placeholder {
  opacity: 1;
}

.cache-1rg4d5m:hover,
.cache-1rg4d5m:focus {
  border-color: #92103f;
}

.cache-1rg4d5m:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
  border-color: #92103f;
}

.cache-2yjbay {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: visible;
  height: auto;
  max-height: initial;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1rg4d5m el3h3g92"
          name="test"
          type="text"
          value="test"
        />
      </div>
      <div
        class="cache-2yjbay e5hc7t70"
      >
        <div
          class="cache-xbtm7g el3h3g94"
        >
          This field should have a length greater than 13
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
